* lf - Fixed to with with site changes (Glenn Carr)

Modified Searches
* sf - Added /svn to SourceForge search to display browseable SVN repository (Glenn Carr)
* qsfreq - Added /remove and /status options.  /remove removes one or more specified searches.  /status displays which searches are enabled and disabled. (Glenn Carr)

New Searches
* tfd - Simple TheFreeDictionary.com search (Glenn Carr)

-- What's new for 4.0.0.2 (Dec 1, 2006)

Enhancements
* DQSD is now hosted by a custom webbrowser host, rather than the undocumented one shipped with IE
* Installation is only allowed from an administrator account
* If upgrading from version 3 or earlier, the previous version must be uninstalled before the new install is allowed.

Bug Fixes
* racetv - fixed a font issue - (Monty Scroggins)
* ggd now resets switches between calls (MLL)

New Searches
* blingo - Search the web using the Google search engine and maybe win something just for searching. (John Bairen)
* wdc - weather.com search (John Bairen)
* tvc - tv.com search (Steve Poirier)
* twe - Twingine (John Bairen)
* cty - city-data search (Monty Scroggins)
* nfltv - NFL tv schedule parsed by timezone (Monty Scroggins)
* iptoc - IP to country name lookup (Nick Jenkins)
* iploc - IP to map lookup (Nick Jenkins)
* si - Static ice search, Australian tech price comparison (Nick Jenkins)
* lfm - Search last.fm, the leading music social site (MLL)
* yt - Simple YouTube search (Glenn Carr)
* dicfr - resurrected from a new reference site (MLL)

Modified Searches
* usps - Updated to go to the right page (Steve Poirier)
* comx - Added the Alex comic (Monty Scroggins)
* qsfreq - Added individual search re-enabling feature (Monty Scroggins)
* sams - Updated to work with new site (Nick Jenkins)
* mb - Updated to follow site changes ("relelases" instead of "albums") (MLL)
* whsc - Updated to follow site changes (MLL)
* guardster - Updated url and added local preference settings to hide cookies, javascript, etc (Brent Beardsley)
