@@ -1,0 +1,51 @@
+<search function="gt">
+  <name>Ultimate Guitar Tabs Archive</name>
+  <category>Reference</category>
+  <contributor>Glenn Carr</contributor>
+  <link>http://www.ultimate-guitar.com/</link>
+  <email>glenn at glenncarr dot com</email>
+  <description>
+  Search ultimate-guitar.com for guitar tabs
+    <div class="helpboxDescLabels">Switches:</div>
+    <table class="helpboxDescTable">
+      <tr><td>/songs</td></tr>
+      <tr><td>/bands</td></tr>
+      <tr><td>/news</td></tr>
+      <tr><td>/columns</td></tr>
+      <tr><td>/reviews</td></tr>
+      <tr><td>/lessons</td></tr>
+      <tr><td>/promos</td></tr>
+      <tr><td>/users</td></tr>
+    </table>
+  </description>
+  <form name="gtf" method="get" action="http://www.ultimate-guitar.com/search.php">
+    <input type="hidden" name="s" value="" />
+    <input type="hidden" name="w" value="songs" />
+  </form>!
+  <script><![CDATA[
+    function gt(q)
+    {
+      if( nullArgs("gt", q) )
+        return;
+
+      var args = parseArgs(q, "songs, bands, news, reviews, lessons, promos, users");
+      if ( args.switches.length > 0 )
+        document.gtf.w.value = args.switches[0].name;
+      else
+        document.gtf.w.value = "songs";
+
+      document.gtf.s.value = args.q;
+
+      submitForm(gtf);
+    }
+  ]]></script>
+  <copyright>
+    The following applies if this file is included and distributed with Dave's Quick Search Deskbar:
+    Copyright (c) 2002 David Bau; Distributed under the terms of the GNU Public License, Version 2 (http://www.gnu.org/copyleft/gpl.txt)
+  </copyright>
+  <created_by>
+    This search file was initially created on 12/30/06 at 15:53:14
+    by Dave's Quick Search Deskbar Search Wizard version 1.3,
+    Copyright (c) 2002 Glenn Carr; Distributed under the terms of the GNU General Public License, Version 2
+  </created_by>
+</search>
